[package]
name = "winnf"
version = "1.2.0"
edition = "2021"
authors = ["PyBash <hi@pybash.xyz>"]
description = "A nerdfetch alternative for windows written in Rust."
documentation = "https://github.com/pybash1/winnf"
readme = "README.md"
homepage = "https://github.com/pybash1/winnf"
repository = "https://github.com/pybash1/winnf"
license = "MIT"
keywords = ["windows", "fetch", "terminal", "cli"]
categories = ["command-line-utilities"]


[dependencies]
winapi = { version = "0.3.9", features = ["sysinfoapi", "winbase"] }
winver = "1.0.0"
